Fix overflow on body

--- a/style.css
+++ b/style.css
@@ -466,6 +466,7 @@ big {
 --------------------------------------------- */
 body {
 	background: #F8FAFC;
+	overflow-x: hidden;
 }
 
 .main-padding-y {
